-------------

(Changes that can break existing programs are marked with a "*")

Other libraries:
* Labltk: removed from the distribution, now available as a third-party library

Language features:
- Attributes and extension nodes

Compilers:
- Experimental native code generator for AArch64 (ARM 64 bits)
- PR#6182: better message for virtual objects and class types
  (Leo P. White, Stephen Dolan)

Bug fixes:
- PR#4719: Sys.executable_name wrong if executable name contains dots (Windows)
- PR#4855: 'camlp4 -I +dir' accepted, dir is relative to 'camlp4 -where'
- PR#5201: ocamlbuild: add --norc to the bash invocation to help performances
- PR#5820: Fix camlp4 lexer roll back problem
- PR#6062: Fix a regression bug caused by commit 13047
- PR#6109: Typos in ocamlbuild error messages
- PR#6116: more efficient implementation of Digest.to_hex (patch by ygrek)

Standard library:
- PR#4986: add List.sort_uniq and Set.of_list
- PR#6148: speed improvement for Buffer (patch by John Whitington)
- PR#6146: support "Unix.kill pid Sys.sigkill" under Windows
- PR#6180: efficient creation of uninitialized float arrays

Features wishes:
- PR#4243: make the Makefiles parallelizable
- PR#4323: have "of_string" in Num and Big_int work with binary and
  hexa representations (patch by Zoe Paraskevopoulou)
- PR#5547: Enable the "-use-ocamlfind" option by default
- PR#5650: Camlp4FoldGenerator doesn't handle well "abstract" types
- PR#6071: Add a -noinit option to the toplevel (patch by David Sheets)
- PR#6166: document -ocamldoc option of ocamlbuild


OCaml 4.01.0:
-------------

(Changes that can break existing programs are marked with a "*")

Other libraries:
- Labltk: updated to Tcl/Tk 8.6.

Type system:
- PR#5759: use well-disciplined type information propagation to
  disambiguate label and constructor names
  (Jacques Garrigue, Alain Frisch and Leo P. White)
* Propagate type information towards pattern-matching, even in the presence of