@@ -61,6 +61,7 @@ module Options = Main_args.Make_optcomp_options (struct
   let _inline n = option_with_int "-inline" n
   let _intf s = with_intf := true; option_with_arg "-intf" s
   let _intf_suffix s = option_with_arg "-intf-suffix" s
+  let _keep_locs = option "-keep-locs"
   let _labels = option "-labels"
   let _linkall = option "-linkall"
   let _no_app_funct = option "-no-app-funct"
