@@ -102,3 +102,5 @@ let shared = ref false (* -shared *)
 let dlcode = ref true (* not -nodynlink *)
 
 let runtime_variant = ref "";;      (* -runtime-variant *)
+
+let keep_locs = ref false              (* -keep-locs *)
