@@ -86,3 +86,4 @@ val shared : bool ref
 val dlcode : bool ref
 val runtime_variant : string ref
 val force_slash : bool ref
+val keep_locs : bool ref
